--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -9,12 +9,13 @@ body {
 }
 .chat-container {
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 10px;
   background-color: white;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  position: relative; /* Ensure absolute positioning works within this container */
 }
 .messages {
   max-height: 400px;
@@ -56,7 +57,7 @@ body {
   margin-right: 8px;
 }
 #sendButton {
-  padding: 10px 20px;
+  padding: 10px 10px;
   background-color: #000000;
   color: white;
   border: none;
@@ -67,13 +68,21 @@ body {
   background-color: #1f1f1f;
 }
 #saveButton {
-  padding: 10px 20px;
+  position: absolute; /* Position it absolutely within the chat container */
+  top: 10px; /* Adjust distance from the top */
+  right: 10px; /* Adjust distance from the right */
+  padding: 5px 10px;
   background-color: #000000;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
+
+#saveButton:hover {
+  background-color: #1f1f1f;
+}
+
 .edit-button {
   background-color: transparent;
   border: none;
