--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   background-color: #f5f5f5;
 }
+
 .chat-container {
   width: 100%;
   max-width: 800px;
@@ -18,36 +19,48 @@ body {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   position: relative;
 }
+
 .messages {
   max-height: 400px;
   overflow-y: auto;
   margin-bottom: 10px;
   padding: 10px;
 }
-.message-container {
+
+.user-message-container,
+.ai-message-container {
   display: flex;
-  align-items: left;
-  flex-direction: column; /* stack vertically */
-  margin: 8px 0;
+  justify-content: flex-start;
+  margin: 0;
 }
+.user-message-container {
+  justify-content: flex-end;
+}
+
+.ai-message-container {
+  justify-content: flex-start;
+}
+
 .message {
   padding: 10px;
   border-radius: 8px;
   max-width: 100%;
+  white-space: pre-wrap; /* Preserve whitespace and line breaks */
+  margin: 0;
 }
 
 .user-message {
   background-color: #106258;
   color: white;
-  margin-left: auto;
   margin-right: 8px;
 }
+
 .ai-message {
   background-color: #e9ecef;
   color: black;
-  margin-right: auto;
+  margin-left: 8px;
 }
-/* for input-container */
+
 .input-wrapper {
   width: 100%;
   max-width: 800px;
@@ -55,19 +68,25 @@ body {
   background-color: white;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
-  max-width: 97%; /* to fit */
+  max-width: 97%; /* To fit */
 }
+
 .input-container {
   display: flex;
   align-items: center;
   width: 100%;
 }
+
 #inputBox {
   flex-grow: 1;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
   margin-right: 8px;
+  resize: vertical;
+  min-height: 40px;
+  max-height: 200px;
+  overflow-y: auto; /* Scroll after max height */
 }
 #sendButton {
   padding: 10px 10px;
@@ -77,6 +96,7 @@ body {
   border-radius: 4px;
   cursor: pointer;
 }
+
 #sendButton:hover {
   background-color: #1f1f1f;
 }
@@ -120,16 +140,21 @@ body {
   font-size: 12px;
   margin-right: 5px;
 }
+
 .edit-button:hover {
   color: #399489;
 }
-.editable-input {
+
+.editable-textarea {
   padding: 8px;
-  font-size: 14px;
+  font-size: 12px;
   width: 100%;
+  height: auto;
   box-sizing: border-box;
   border: 1px solid #ddd;
   border-radius: 4px;
+  resize: vertical;
+  margin-right: 8px;
 }
 
 .code-block {
