--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -27,11 +27,10 @@ body {
   overflow: hidden;
 }
 
-/* Header section */
 .header {
   display: flex;
   align-items: center;
-  justify-content: space-between; /* Push content to the edges */
+  justify-content: space-between; /* push content to edges */
   padding: 10px 20px;
   border-bottom: 1px solid #ddd;
   background-color: #ffffff;
@@ -57,13 +56,13 @@ body {
   margin-left: auto; /* buttons pushed to the right */
 }
 
-/* Messages section */
+
 .messages {
   flex-grow: 1;
   padding: 10px;
   overflow-y: auto;
   max-height: 600px;
-  min-height: 100px; /* Prevent collapse */
+  min-height: 100px; /* prevent collapse */
   background-color: #f9f9f9;
 }
 
@@ -94,6 +93,7 @@ body {
 }
 
 .ai-message {
+  max-width: 100%;
   background-color: #e9ecef;
   color: black;
   padding: 5px;
@@ -122,7 +122,7 @@ body {
   align-items: center;
   gap: 10px;
   width: 100%;
-  flex-direction: row-reverse; /* Adjusts the direction */
+  flex-direction: row-reverse;
 }
 
 #inputBox {
@@ -170,6 +170,7 @@ button i {
 }
 
 .diagram-container {
+  width: 100%;
   position: relative;
   margin: 10px 0;
   padding: 10px;
@@ -227,13 +228,13 @@ button i {
 }
 
 .save-svg-button i {
-  font-size: 16px; /* Size of the Font Awesome icon */
+  font-size: 16px;
 }
 
 .save-svg-button:hover {
   background-color: transparent;
-  color: #38615c; /* Hover color */
-  transform: scale(1.2); /* Slight scaling effect */
+  color: #38615c;
+  transform: scale(1.2); /* scaling effect */
   transition: color 0.2s, transform 0.2s;
 }
 
@@ -255,7 +256,23 @@ button i {
   }
 }
 
-/* Copy Button */
+.code-block-wrapper {
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+  padding: 1rem;
+  border-radius: 4px;
+  position: relative;
+  overflow-x: auto;
+}
+
+.code-block-wrapper code {
+  font-family: 'Courier New', Courier, monospace;
+  color: #171717;
+  font-size: 14px;
+  display: block;
+  white-space: pre; /* Preserve formatting */
+}
+
 .copy-button {
   position: absolute;
   top: 4px;
