--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -75,8 +75,12 @@ body {
 .highlight {
   background-color: #ffeeba;
   color: #000;
-  font-weight: bold;
+  /* font-weight: bold; */
+  padding: 0;
+  margin: 0;
+  display: inline;
 }
+
 .messages {
   flex-grow: 1;
   padding: 10px;
