--- a/src/static/styles/layout.css
+++ b/src/static/styles/layout.css
@@ -81,6 +81,11 @@
   resize: vertical;
 }
 
+.search-error {
+    border-color: red;
+    background-color: #ffe6e6;
+}
+
 .button-group {
   display: flex;
   margin-left: auto; /* buttons pushed to the right */
